src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Job_Title__c</fullName>
        <label>Custom Job Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Class__c</fullName>
        <label>Icon Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Position__c</fullName>
        <inlineHelpText>Job Position will appear on the Web Site &quot;Join Us&quot; section and should be a short/clear description of the position for the job.</inlineHelpText>
        <label>Job Position</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Specification__c</fullName>
        <inlineHelpText>Job Specification will appear on the Web Site when a link from a position in &quot;Join Us&quot; is clicked and a form is displayed showing the complete Job Specification.</inlineHelpText>
        <label>Job Specification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>IT Project Manager / Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architect / Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Business Analyst</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Custom_Job_Title__c</columns>
        <columns>Icon_Class__c</columns>
        <columns>Job_Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB/{0000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>